[package]

name = "glob"
version = "0.2.10"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/rust-lang/glob"
repository = "https://github.com/rust-lang/glob"
documentation = "http://doc.rust-lang.org/glob"
description = """
Support for matching file paths against Unix shell style patterns.
"""

[dev-dependencies]
tempdir = "0.3"
